# Software-Quality

./: CMakeLists.txt  Farmacia.cpp  Farmacia.h  Laboratorio.cpp  Laboratorio.h  MediExpress.cpp  MediExpress.h  P1.Doxyfile  PaMedicamento.cpp  PaMedicamento.h  Stock.cpp  Stock.h  anotaciones.txt  compile_commands.json  farmacias.csv  main.cpp
doc/html/: _farmacia_8cpp.html  _farmacia_8cpp__incl.map  _farmacia_8cpp__incl.md5  _farmacia_8cpp_source.html  _farmacia_8h.html  _farmacia_8h__dep__incl.map  _farmacia_8h__dep__incl.md5  _farmacia_8h__incl.map  _farmacia_8h__incl.md5  _farmacia_8h_source.html  _laboratorio_8cpp.html  _laboratorio_8cpp__incl.map  _laboratorio_8cpp__incl.md5  _laboratorio_8cpp_source.html  _laboratorio_8h.html  _laboratorio_8h__dep__incl.map  _laboratorio_8h__dep__incl.md5  _laboratorio_8h__incl.map  _laboratorio_8h__incl.md5  _laboratorio_8h_source.html  _medi_express_8cpp.html  _medi_express_8cpp__incl.map  _medi_express_8cpp__incl.md5  _medi_express_8cpp_source.html  _medi_express_8h.html  _medi_express_8h__dep__incl.map  _medi_express_8h__dep__incl.md5  _medi_express_8h__incl.map  _medi_express_8h__incl.md5  _medi_express_8h_source.html  _pa_medicamento_8cpp.html  _pa_medicamento_8cpp__incl.map  _pa_medicamento_8cpp__incl.md5  _pa_medicamento_8cpp_source.html  _pa_medicamento_8h.html  _pa_medicamento_8h__dep__incl.map  _pa_medicamento_8h__dep__incl.md5  _pa_medicamento_8h__incl.map  _pa_medicamento_8h__incl.md5  _pa_medicamento_8h_source.html  (+169 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  (+29 more)
